change font-family inter

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>RENTIND PROJECT </title>
 
     <!-- Google Font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Inter:wght@400;500;600;700&family=
-    Kolker+Brush&family=Oswald:wght@700&display=swap" rel="stylesheet">
+    Kolker+Brush&family=Oswald:wght@700&display=swap" rel="stylesheet"><link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    
 
     <!-- ICONS -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
