--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body class="bg-[#FAFAFA]">
-    <header class="conatainer mx-auto px-5 py-3 flex lg:px-10 lg:py-5 justify-between items-center  "> 
+    <header class="conatainer md:full mx-auto px-5 py-3 flex lg:px-10 lg:py-5 justify-between items-center fixed  "> 
         <div>
             <img src="assets/img/LOGO.png"  width="187" height="50" alt="Rentind Academy"> 
         </div>  
@@ -29,11 +29,12 @@
                 <option value="All categories">All categories</option>
             </select>
             <input type="text" placeholder=" Try typing 'snipanch'" class=" outline-none border-l-2 border-[#E6E6E6] pl-3 ">
-            <i class='bx bx-search-alt-2'></i>
+            <i class='bx bx-search'></i>
         </div>
         <nav>
-            <div class ="hidden md:block">
-            <ul class=" flex gap-x-8">
+            <div class ="static top-[-1000%] left-[50%] translate-x-[-50%] text-center  shadow-md w-4/5 p-5 rounded-2xl transition duration-300 ease-in-ou md:text-left md:shadow-none md:w-fit  md:translate-x-0 "
+            id="navMenu">
+            <ul class=" flex gap-x-8 flex-col gap-y-4 md:flex-row">
                 <li><a href="#">Eksplore </a></li>
                 <li><a href="#">Rents </a></li>
                 <li><a href="#">Sales</a></li>
@@ -41,10 +42,14 @@
                 <li><a href="#" class=" bg bg-gray-200 px-5 py-2 rounded-full">Contact Us</a></li>
             </ul>
             </div>
-            <div class="hover:cursor-pointer md:hidden">
+            <div class="hover:cursor-pointer md:hidden"
+            id="nav-toggle ">
                 <i class='bx bx-menu text-lg'></i>
             </div>
         </nav>
     </header>
+
+<!-- java script -->
+    <script src="/js/main.js"></script>
 </body>
 </html>
