--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header
         class="container w-full mx-auto px-5 py-3 flex lg:px-10 lg:py-5 justify-between items-center fixed top-0 z-50">
         <div>
-            <img src="assets/img/logo.png" alt="Rentind Academy">
+            <img src="assets/img/LOGO.png" alt="Rentind Academy">
         </div>
         <div class="hidden lg:block bg-white px-3 py-2 rounded-md">
             <select name="" id="" class="outline-none mr-5 font-medium">
