--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <p class="hidden lg:block lg:leading-[1.65] lg:text-[#697586]">Lorem Ipsum is simply dummy text of the printing and <br> typesetting industry. Lorem Ipsum has been the industry's <br> standard dummy text ever since the 1500s.</p>
                     <div class="flex flex-col items-center lg:flex-row lg:gap-x-6">
                         <a href="#"
-                            class=" transition ease-in-out delay-150 hover over:-translate-y-1 hover:scale-110 hover:bg-slate-500 duration-300 bg-white text-black-mamba shadow-sm shadow-white lg:bg-black-mamba lg:text-white px-5 py-3 rounded-md font-bold lg:font-semibold">Explore
+                            class="transition ease-in-out delay-150 hover over:-translate-y-1 hover:scale-110 hover:bg-slate-500 duration-300 bg-white text-black-mamba shadow-sm shadow-white lg:bg-black-mamba lg:text-white px-5 py-3 rounded-md font-bold lg:font-semibold">Explore
                             Now</a>
                         <a href="#" class="group mt-8 lg:mt-0 lg:pt-0 font-medium lg:font-semibold transition ease-in-out delay-150 hover over:-translate-y-1 hover:scale-110  duration-300">Learn
                             More <i
@@ -94,26 +94,26 @@
         <h2 class="text-center text-xl font-semibold lg:text-3xl xl:text-4xl">Most Popular Apartements</h2>
         <div class="flex justify-center pt-5 lg:pt-0">
             <div class="bg-white drop-shadow-xl rounded-md px-2 py-1 mr-5 flex items-center lg:drop-shadow-none lg:px-4 lg:py-2">
-                <img src="assets/img/map.png" alt="" class="h-4 pr-1">
+                <img src="./assets/images/icon.png" alt="" class="h-4 pr-1">
                 <select name="" id="" class="font-medium text-xs lg:text-lg lg:font-semibold">
                     <option value="">Bandung</option>
                     <option value="">Jakarta</option>
                     <option value="">Makassar</option>
                 </select>
             </div>
-            <a href="#" class="bg-black-mamba px-3 py-2 text-white font-normal text-xs rounded-md lg:font-medium lg:text-lg lg:px-6 lg:py-2 transition ease-in-out delay-150 hover over:-translate-y-1 hover:scale-110 hover:bg-slate-500 duration-300">See more</a>
+            <a href="#" class="bg-black-mamba px-3 py-2 text-white font-normal text-xs rounded-md lg:font-medium lg:text-lg lg:px-6 lg:py-2 transition ease-in-out delay-150 hover over:-translate-y-1 hover:scale-110 hover:bg-slate-500 duration-300 shadow-sm shadow-white lg:bg-black-mamba lg:text-white ">See more</a>
         </div>
     </div>
     <div class="container relative bg-black-mamba h-auto lg:h-[280px] xl:h-[360px] 2xl:h-[400px] mt-10 lg:px-12 lg:mt-52 xl:mt-56 2xl:mt-64">
         <div class="flex flex-col items-center lg:justify-between lg:flex-row lg:relative lg:-top-52 xl:-top-56 2xl:-top-64">
             <div class="relative bg-white w-[75%] h-auto rounded-lg mt-10 lg:w-[40%] lg:mx-2">
-                <img src="assets/img/populer1.png" alt="Haven Cubby Apartement" class="pt-4 px-5 rounded-lg xl:w-10/12 ">
+                <img src="assets/img/populer1.png" alt="Haven Cubby Apartement"  class="pt-4 px-5">
                 <div class=" bg-black-mamba flex items-center gap-x-2 absolute top-[3%] px-5 py-[10px] rounded-md rounded-bl-none lg:px-4 lg:py-[8px] sm:top-[6%] after:content-[''] after:bg-transparent after:w-5 after:h-5 after:absolute after:border-[11px] after:border-solid after:border-b-transparent after:border-l-transparent after:border-black-mamba after:top-[100%] after:-left-[1%] lg:after:border-[10px] lg:after:left-0">
-                    <img src="assets/img/api.png" alt="" class="h-[14px] sm:h-[16px] xl:h-[18px]">
+                    <img src="assets/img/filled.svg" alt="" class="h-[14px] sm:h-[16px] xl:h-[18px]">
                     <p class="text-white text-xs font-medium sm:font-normal sm:text-base xl:text-lg 2xl:text-xl">Popular</p>
                 </div>
-                <div class="flex pt-2 pl-6 lg:pt-3">
-                    <i class='bx bxs-star text-sm pr-1 sm:text-lg text-[#ffb52d]'  ></i>
+                <div class="flex pt-2 pl-6 lg:pt-3 ">
+                    <i class='bx bxs-star text-sm pr-1 sm:text-lg text-[#ffb52d] -mt-1'  ></i>
                     <p class="text-xs font-semibold pr-1 sm:text-sm 2xl:text-base">4.9</p>
                     <p class="text-xs text-[#697586] sm:text-sm 2xl:text-base">(22 Review) &#8226 1000 units</p>
                 </div>
@@ -123,18 +123,18 @@
                     <p class="text-xs font-medium sm:text-sm 2xl:text-base">Setia Budi</p>
                 </div>
                 <div class="flex justify-center pt-3 pb-5">
-                    <a href="#" class="bg-[#F3F3F3] px-7 py-2 mr-2 text-black-mamba font-medium text-xs rounded-md sm:text-sm sm:px-5 sm:py-3 sm:mr-7 lg:mr-4 xl:text-base xl:px-7 2xl:text-lg 2xl:px-9 transition ease-in-out delay-150 hover over:-translate-y-1 hover:scale-110 hover:bg-black hover:text-rose-50 duration-300">Click Details</a>
-                    <a href="#" class="bg-black-mamba px-8 py-2 text-white font-medium text-xs rounded-md sm:text-sm sm:px-7 sm:py-3 xl:text-base xl:px-8 2xl:text-lg 2xl:px-10 transition ease-in-out delay-150 hover over:-translate-y-1 hover:scale-110 duration-300">Rent Now</a>
+                    <a href="#" class="bg-[#F3F3F3] px-7 py-2 mr-2 text-black-mamba font-medium text-xs rounded-md sm:text-sm sm:px-5 sm:py-3 sm:mr-7 lg:mr-4 xl:text-base xl:px-7 2xl:text-lg 2xl:px-9">Click Details</a>
+                    <a href="#" class="bg-black-mamba px-8 py-2 text-white font-medium text-xs rounded-md sm:text-sm sm:px-7 sm:py-3 xl:text-base xl:px-8 2xl:text-lg 2xl:px-10 transition ease-in-out delay-150 hover over:-translate-y-1 hover:scale-110 hover:bg-slate-500 duration-300">Rent Now</a>
                 </div>
             </div>
             <div class="relative bg-white w-3/4 h-auto rounded-lg mt-10 lg:w-[40%] lg:mx-2">
                 <img src="assets/img/populer2.png" alt="Baznai Tower Apartements" class="pt-4 px-5">
                 <div class=" bg-black-mamba flex items-center gap-x-2 absolute top-[3%] px-5 py-[10px] rounded-md rounded-bl-none lg:px-4 lg:py-[8px] sm:top-[6%] after:content-[''] after:bg-transparent after:w-5 after:h-5 after:absolute after:border-[11px] after:border-solid after:border-b-transparent after:border-l-transparent after:border-black-mamba after:top-[100%] after:-left-[1%] lg:after:border-[10px] lg:after:left-0">
-                    <img src="assets/img/api.png" alt="" class="h-[14px] sm:h-[16px] xl:h-[18px]">
+                    <img src="assets/img/filled.svg" alt="" class="h-[14px] sm:h-[16px] xl:h-[18px]">
                     <p class="text-white text-xs font-medium sm:font-normal sm:text-base xl:text-lg 2xl:text-xl">Popular</p>
                 </div>
                 <div class="flex pt-2 pl-6 lg:pt-3">
-                    <i class='bx bxs-star text-sm pr-1 sm:text-lg text-[#ffb52d]'  ></i>
+                    <i class='bx bxs-star text-sm pr-1 sm:text-lg text-[#ffb52d] -mt-1'  ></i>
                     <p class="text-xs font-semibold pr-1 sm:text-sm 2xl:text-base">4.9</p>
                     <p class="text-xs text-[#697586] sm:text-sm 2xl:text-base">(22 Review) &#8226 1000 units</p>
                 </div>
@@ -144,18 +144,18 @@
                     <p class="text-xs font-medium sm:text-sm 2xl:text-base">Setia Budi</p>
                 </div>
                 <div class="flex justify-center pt-3 pb-5">
-                    <a href="#" class="bg-[#F3F3F3] px-7 py-2 mr-2 text-black-mamba font-medium text-xs rounded-md sm:text-sm sm:px-5 sm:py-3 sm:mr-7 lg:mr-4 xl:text-base xl:px-7 2xl:text-lg 2xl:px-9 transition ease-in-out delay-150 hover over:-translate-y-1 hover:scale-110 hover:bg-black hover:text-rose-50 duration-300">Click Details</a>
-                    <a href="#" class="bg-black-mamba px-8 py-2 text-white font-medium text-xs rounded-md sm:text-sm sm:px-7 sm:py-3 xl:text-base xl:px-8 2xl:text-lg 2xl:px-10 transition ease-in-out delay-150 hover over:-translate-y-1 hover:scale-110 duration-300">Rent Now</a>
+                    <a href="#" class="bg-[#F3F3F3] px-7 py-2 mr-2 text-black-mamba font-medium text-xs rounded-md sm:text-sm sm:px-5 sm:py-3 sm:mr-7 lg:mr-4 xl:text-base xl:px-7 2xl:text-lg 2xl:px-9">Click Details</a>
+                    <a href="#" class="bg-black-mamba px-8 py-2 text-white font-medium text-xs rounded-md sm:text-sm sm:px-7 sm:py-3 xl:text-base xl:px-8 2xl:text-lg 2xl:px-10 transition ease-in-out delay-150 hover over:-translate-y-1 hover:scale-110 hover:bg-slate-500 duration-300">Rent Now</a>
                 </div>
             </div>
             <div class="relative bg-white w-3/4 h-auto rounded-lg mt-10 mb-10 lg:mb-0 lg:w-[40%] lg:mx-2">
                 <img src="assets/img/populer3.png" alt="Luxville Modern Apartements" class="pt-4 px-5">
                 <div class=" bg-black-mamba flex items-center gap-x-2 absolute top-[3%] px-5 py-[10px] rounded-md rounded-bl-none lg:px-4 lg:py-[8px] sm:top-[6%] after:content-[''] after:bg-transparent after:w-5 after:h-5 after:absolute after:border-[11px] after:border-solid after:border-b-transparent after:border-l-transparent after:border-black-mamba after:top-[100%] after:-left-[1%] lg:after:border-[10px] lg:after:left-0">
-                    <img src="assets/img/api.png" alt="" class="h-[14px] sm:h-[16px] xl:h-[18px]">
+                    <img src="assets/img/filled.svg" alt="" class="h-[14px] sm:h-[16px] xl:h-[18px]">
                     <p class="text-white text-xs font-medium sm:font-normal sm:text-base xl:text-lg 2xl:text-xl">Popular</p>
                 </div>
                 <div class="flex pt-2 pl-6 lg:pt-3">
-                    <i class='bx bxs-star text-sm pr-1 sm:text-lg text-[#ffb52d]'  ></i>
+                    <i class='bx bxs-star text-sm pr-1 sm:text-lg text-[#ffb52d] -mt-1'  ></i>
                     <p class="text-xs font-semibold pr-1 sm:text-sm 2xl:text-base">4.9</p>
                     <p class="text-xs text-[#697586] sm:text-sm 2xl:text-base">(22 Review) &#8226 1000 units</p>
                 </div>
@@ -165,8 +165,8 @@
                     <p class="text-xs font-medium sm:text-sm 2xl:text-base">Setia Budi</p>
                 </div>
                 <div class="flex justify-center pt-3 pb-5">
-                    <a href="#" class="bg-[#F3F3F3] px-7 py-2 mr-2 text-black-mamba font-medium text-xs rounded-md sm:text-sm sm:px-5 sm:py-3 sm:mr-7 lg:mr-4 xl:text-base xl:px-7 2xl:text-lg 2xl:px-9 transition ease-in-out delay-150 hover over:-translate-y-1 hover:scale-110 hover:bg-black hover:text-rose-50 duration-300">Click Details</a>
-                    <a href="#" class="bg-black-mamba px-8 py-2 text-white font-medium text-xs rounded-md sm:text-sm sm:px-7 sm:py-3 xl:text-base xl:px-8 2xl:text-lg 2xl:px-10 transition ease-in-out delay-150 hover over:-translate-y-1 hover:scale-110 duration-300">Rent Now</a>
+                    <a href="#" class="bg-[#F3F3F3] px-7 py-2 mr-2 text-black-mamba font-medium text-xs rounded-md sm:text-sm sm:px-5 sm:py-3 sm:mr-7 lg:mr-4 xl:text-base xl:px-7 2xl:text-lg 2xl:px-9">Click Details</a>
+                    <a href="#" class="bg-black-mamba px-8 py-2 text-white font-medium text-xs rounded-md sm:text-sm sm:px-7 sm:py-3 xl:text-base xl:px-8 2xl:text-lg 2xl:px-10 transition ease-in-out delay-150 hover over:-translate-y-1 hover:scale-110 hover:bg-slate-500 duration-300">Rent Now</a>
                 </div>
             </div>
         </div>
