--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <h2 class="text-center text-xl font-semibold lg:text-3xl xl:text-4xl">Most Popular Apartements</h2>
         <div class="flex justify-center pt-5 lg:pt-0">
             <div class="bg-white drop-shadow-xl rounded-md px-2 py-1 mr-5 flex items-center lg:drop-shadow-none lg:px-4 lg:py-2">
-                <img src="./assets/images/icon.png" alt="" class="h-4 pr-1">
+                <img src="assets/img/map.png" alt="" class="h-4 pr-1">
                 <select name="" id="" class="font-medium text-xs lg:text-lg lg:font-semibold">
                     <option value="">Bandung</option>
                     <option value="">Jakarta</option>
@@ -207,14 +207,14 @@
                     </div>
                 </div>
                 <div class="hidden relative lg:inline lg:w-full lg:row-span-1">
-                    <img src="/assets/img/medan2.png" alt="" class="rounded-xl w-[100%] h-auto cursor-pointer ">
+                    <img src="/assets/img/image 19.png" alt="" class="rounded-xl w-[100%] h-auto cursor-pointer ">
                     <div class="absolute bottom-5 left-4">
                         <h3 class="text-[#f4f4f4] font-semibold text-base">Medan</h3>
                         <p class="text-xs text-[#c5c5c5] font-medium">24+ Total Unit</p>
                     </div>
                 </div>
                 <div class="hidden relative lg:inline lg:w-full lg:row-span-2">
-                    <img src="/assets/img/bandung.png" alt="" class="rounded-xl w-[100%] h-auto cursor-pointer  ">
+                    <img src="/assets/img/image 18 (2).png" alt="" class="rounded-xl w-[100%] h-auto cursor-pointer  ">
                     <div class="absolute bottom-5 left-4">
                         <h3 class="text-[#f4f4f4] font-semibold text-base">Bali Island</h3>
                         <p class="text-xs text-[#c5c5c5] font-medium">60+ Total Unit</p>
@@ -302,7 +302,7 @@
         </div>
     </div>
     <div class="lg:raunded-xl ">
-        <img src="assets/img/belakang.png" alt="Apartement" class="hidden lg:mr-4 lg:flex lg:absolute lg:m-auto lg:-mt-96 lg:right-10 " width="350" height="150" >
+        <img src="assets/img/belakang.png" alt="Apartement" class="hidden sm:mr-4 lg:flex lg:absolute lg:m-auto lg:-mt-96 lg:right-10 " width="350" height="150" >
         <img src="assets/img/depan.png" alt="Apartement" class="rounded-xl hidden lg:mr-4 lg:flex lg:absolute lg:m-auto lg:-mt-72 lg:right-44 lg:bg-white py-5 px-5 " width="280" height="80">
     </div>
 </div>
