--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="relative bg-white w-[75%] h-auto rounded-lg mt-10 lg:w-[40%] lg:mx-2">
                 <img src="assets/img/populer1.png" alt="Haven Cubby Apartement"  class="pt-4 px-5">
                 <div class=" bg-black-mamba flex items-center gap-x-2 absolute top-[3%] px-5 py-[10px] rounded-md rounded-bl-none lg:px-4 lg:py-[8px] sm:top-[6%] after:content-[''] after:bg-transparent after:w-5 after:h-5 after:absolute after:border-[11px] after:border-solid after:border-b-transparent after:border-l-transparent after:border-black-mamba after:top-[100%] after:-left-[1%] lg:after:border-[10px] lg:after:left-0">
-                    <img src="assets/img/filled.svg" alt="" class="h-[14px] sm:h-[16px] xl:h-[18px]">
+                    <img src="assets/img/api.png" alt="" class="h-[14px] sm:h-[16px] xl:h-[18px]">
                     <p class="text-white text-xs font-medium sm:font-normal sm:text-base xl:text-lg 2xl:text-xl">Popular</p>
                 </div>
                 <div class="flex pt-2 pl-6 lg:pt-3 ">
@@ -130,7 +130,7 @@
             <div class="relative bg-white w-3/4 h-auto rounded-lg mt-10 lg:w-[40%] lg:mx-2">
                 <img src="assets/img/populer2.png" alt="Baznai Tower Apartements" class="pt-4 px-5">
                 <div class=" bg-black-mamba flex items-center gap-x-2 absolute top-[3%] px-5 py-[10px] rounded-md rounded-bl-none lg:px-4 lg:py-[8px] sm:top-[6%] after:content-[''] after:bg-transparent after:w-5 after:h-5 after:absolute after:border-[11px] after:border-solid after:border-b-transparent after:border-l-transparent after:border-black-mamba after:top-[100%] after:-left-[1%] lg:after:border-[10px] lg:after:left-0">
-                    <img src="assets/img/filled.svg" alt="" class="h-[14px] sm:h-[16px] xl:h-[18px]">
+                    <img src="assets/img/api.png" alt="" class="h-[14px] sm:h-[16px] xl:h-[18px]">
                     <p class="text-white text-xs font-medium sm:font-normal sm:text-base xl:text-lg 2xl:text-xl">Popular</p>
                 </div>
                 <div class="flex pt-2 pl-6 lg:pt-3">
@@ -151,7 +151,7 @@
             <div class="relative bg-white w-3/4 h-auto rounded-lg mt-10 mb-10 lg:mb-0 lg:w-[40%] lg:mx-2">
                 <img src="assets/img/populer3.png" alt="Luxville Modern Apartements" class="pt-4 px-5">
                 <div class=" bg-black-mamba flex items-center gap-x-2 absolute top-[3%] px-5 py-[10px] rounded-md rounded-bl-none lg:px-4 lg:py-[8px] sm:top-[6%] after:content-[''] after:bg-transparent after:w-5 after:h-5 after:absolute after:border-[11px] after:border-solid after:border-b-transparent after:border-l-transparent after:border-black-mamba after:top-[100%] after:-left-[1%] lg:after:border-[10px] lg:after:left-0">
-                    <img src="assets/img/filled.svg" alt="" class="h-[14px] sm:h-[16px] xl:h-[18px]">
+                    <img src="assets/img/api.png" alt="" class="h-[14px] sm:h-[16px] xl:h-[18px]">
                     <p class="text-white text-xs font-medium sm:font-normal sm:text-base xl:text-lg 2xl:text-xl">Popular</p>
                 </div>
                 <div class="flex pt-2 pl-6 lg:pt-3">
@@ -173,57 +173,56 @@
     </div>
 </section>
 
-
-<!-- OFFER -->
-        <section class="container mx-auto mt-8 px-5 py-5 lg:-px-0 lg:py-0 lg:mt-0 lg:bg-black-mamba ">
-            <p class="font-medium text-sm px-10 py-1 
-            capitalize lg:hidden">Exclusive offer from us for you <br>
-                to have your dream home </p>
-            <p class="hidden lg:block lg:font-medium lg:text-base lg:text-white lg:pt-5 lg:pb-3 lg:text-center capitalize">Exclusive offer from us for you <br>
-                to have your dream home </p>
-            <h2 class="text-black-mamba text-xl font-bold px-10 lg:text-white lg:text-center lg:text-3xl lg:font-semibold">We Provide The Best Experience For Your Residence </h2>
-            <div class="grid grid-cols-1 gap-6 py-5 place-items-center lg:grid-row-3 lg:grid-cols-3 lg:gap-8 lg:grid-flow-col lg:place-items-start lg:px-8 lg:py-10">
-                <div class="relative lg:w-full lg:row-span-3">
-                    <img src="assets/img/offer1.png" alt="" class="rounded-xl shadow-lg lg:hidden cursor-pointer ">
-                    <img src="assets/img/offer1.png" alt="" class="hidden lg:block rounded-xl w-[100%] h-auto cursor-pointer ">
-                    <div class="absolute bottom-5 left-4">
-                        <h3 class="text-[#f4f4f4] font-semibold text-base">Jakarta</h3>
-                        <p class="text-xs text-[#c5c5c5] font-medium">560+ Total Unit</p>
-                    </div>
-                </div>
-                <div class="relative lg:w-full lg:row-span-2">
-                    <img src="assets/img/offer2.png" alt="" class="rounded-xl shadow-lg lg:hidden cursor-pointer ">
-                    <img src="assets/img/bandung.png" alt="" class="hidden lg:inline rounded-xl w-[100%] h-auto cursor-pointer ">
-                    <div class="absolute bottom-5 left-4">
-                        <h3 class="text-[#f4f4f4] font-semibold text-base">Bandung</h3>
-                        <p class="text-xs text-[#c5c5c5] font-medium">120+ Total Unit</p>
-                    </div>
-                </div>
-                <div class="hidden relative lg:inline lg:w-full lg:row-span-1">
-                    <img src="assets/img/surabaya.png" alt="" class="rounded-xl w-[100%] h-auto cursor-pointer ">
-                    <div class="absolute bottom-5 left-4">
-                        <h3 class="text-[#f4f4f4] font-semibold text-base">Surabaya</h3>
-                        <p class="text-xs text-[#c5c5c5] font-medium">90+ Total Unit</p>
-                    </div>
-                </div>
-                <div class="hidden relative lg:inline lg:w-full lg:row-span-1">
-                    <img src="/assets/img/image 19.png" alt="" class="rounded-xl w-[100%] h-auto cursor-pointer ">
-                    <div class="absolute bottom-5 left-4">
-                        <h3 class="text-[#f4f4f4] font-semibold text-base">Medan</h3>
-                        <p class="text-xs text-[#c5c5c5] font-medium">24+ Total Unit</p>
-                    </div>
-                </div>
-                <div class="hidden relative lg:inline lg:w-full lg:row-span-2">
-                    <img src="/assets/img/image 18 (2).png" alt="" class="rounded-xl w-[100%] h-auto cursor-pointer  ">
-                    <div class="absolute bottom-5 left-4">
-                        <h3 class="text-[#f4f4f4] font-semibold text-base">Bali Island</h3>
-                        <p class="text-xs text-[#c5c5c5] font-medium">60+ Total Unit</p>
-                    </div>
-                </div>
+<!-- offer -->
+<section class="container mx-auto mt-8 px-5 py-5 lg:-px-0 lg:py-0 lg:mt-0 lg:bg-black-mamba ">
+    <p class="font-medium text-sm px-10 py-1 
+    capitalize lg:hidden">Exclusive offer from us for you <br>
+        to have your dream home </p>
+    <p class="hidden lg:block lg:font-medium lg:text-base lg:text-white lg:pt-5 lg:pb-3 lg:text-center capitalize">Exclusive offer from us for you <br>
+        to have your dream home </p>
+    <h2 class="text-black-mamba text-xl font-bold px-10 lg:text-white lg:text-center lg:text-3xl lg:font-semibold">We Provide The Best Experience For Your Residence </h2>
+    <div class="grid grid-cols-1 gap-6 py-5 place-items-center lg:grid-row-3 lg:grid-cols-3 lg:gap-8 lg:grid-flow-col lg:place-items-start lg:px-8 lg:py-10">
+        <div class="relative lg:w-full lg:row-span-3">
+            <img src="assets/img/offer1.png" alt="" class="rounded-xl shadow-lg lg:hidden cursor-pointer ">
+            <img src="assets/img/jakarta.png" alt="" class="hidden lg:block rounded-xl w-[100%] h-auto cursor-pointer ">
+            <div class="absolute bottom-5 left-4">
+                <h3 class="text-[#f4f4f4] font-semibold text-base">Jakarta</h3>
+                <p class="text-xs text-[#c5c5c5] font-medium">560+ Total Unit</p>
             </div>
-            <a href="#" class="bg-black-mamba px-4 py-3 text-white font-medium text-lg rounded-lg w-fit block mx-auto lg:hidden">Show more</a>
-        </section>
-    </main>
+        </div>
+        <div class="relative lg:w-full lg:row-span-2">
+            <img src="assets/img/offer2.png" alt="" class="rounded-xl shadow-lg lg:hidden cursor-pointer ">
+            <img src="assets/img/bandung.png" alt="" class="hidden lg:inline rounded-xl w-[100%] h-auto cursor-pointer ">
+            <div class="absolute bottom-5 left-4">
+                <h3 class="text-[#f4f4f4] font-semibold text-base sm:hidden">Bandung</h3>
+                <p class="text-xs text-[#c5c5c5] font-medium">120+ Total Unit</p>
+            </div>
+        </div>
+        <div class="hidden relative lg:inline lg:w-full lg:row-span-1">
+            <img src="assets/img/surabaya.png" alt="" class="rounded-xl w-[100%] h-auto cursor-pointer ">
+            <div class="absolute bottom-5 left-4">
+                <h3 class="text-[#f4f4f4] font-semibold text-base">Surabaya</h3>
+                <p class="text-xs text-[#c5c5c5] font-medium">90+ Total Unit</p>
+            </div>
+        </div>
+        <div class="hidden relative lg:inline lg:w-full lg:row-span-1">
+            <img src="/assets/img/medan.png" alt="" class="rounded-xl w-[100%] h-auto cursor-pointer ">
+            <div class="absolute bottom-5 left-4">
+                <h3 class="text-[#f4f4f4] font-semibold text-base">Medan</h3>
+                <p class="text-xs text-[#c5c5c5] font-medium">24+ Total Unit</p>
+            </div>
+        </div>
+        <div class="hidden relative lg:inline lg:w-full lg:row-span-2">
+            <img src="/assets/img/bali.png" alt="" class="rounded-xl w-[100%] h-auto cursor-pointer  ">
+            <div class="absolute bottom-5 left-4">
+                <h3 class="text-[#f4f4f4] font-semibold text-base">Bali Island</h3>
+                <p class="text-xs text-[#c5c5c5] font-medium">60+ Total Unit</p>
+            </div>
+        </div>
+    </div>
+    <a href="#" class="bg-black-mamba px-4 py-3 text-white font-medium text-lg rounded-lg w-fit block mx-auto lg:hidden">Show more</a>
+</section>
+</main>
 
 <!-- Reason -->
 <section class=" py-5 px-5 ">
