--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             <img src="assets/img/offer2.png" alt="" class="rounded-xl shadow-lg lg:hidden cursor-pointer ">
             <img src="assets/img/bandung.png" alt="" class="hidden lg:inline rounded-xl w-[100%] h-auto cursor-pointer ">
             <div class="absolute bottom-5 left-4">
-                <h3 class="text-[#f4f4f4] font-semibold text-base sm:hidden">Bandung</h3>
+                <h3 class="text-[#f4f4f4] font-semibold text-base ">Bandung</h3>
                 <p class="text-xs text-[#c5c5c5] font-medium">120+ Total Unit</p>
             </div>
         </div>
