--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             </div>
         </div>
         <div class="hidden relative lg:inline lg:w-full lg:row-span-2">
-            <img src="assets/img/image 19.png" alt="" class="rounded-xl w-[100%] h-auto cursor-pointer  ">
+            <img src="assets/img/bali.png" alt="" class="rounded-xl w-[100%] h-auto cursor-pointer  ">
             <div class="absolute bottom-5 left-4">
                 <h3 class="text-[#f4f4f4] font-semibold text-base">Bali Island</h3>
                 <p class="text-xs text-[#c5c5c5] font-medium">60+ Total Unit</p>
