--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         class="w-full bg-white mx-auto px-5 py-3 flex lg:px-10 lg:py-5 justify-between items-center fixed top-0 z-50"
         id="header">
         <div>
-            <img src="assets/img/logo.png" alt="Rentind Academy">
+            <img src="assets/img/LOGO.png" alt="Rentind Academy">
         </div>
         <div class="hidden lg:block bg-white px-3 py-2 rounded-md">
             <div class="relative inline-flex items-center gap-x-2 mr-3 w-[150px]">
